[package]
name = "clueless"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
http-body-util = { version = "0.1.2" }
hyper = { version = "1.5.1", features = ["http1", "server"] }
tokio = { version = "1.41.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["server", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
serde_urlencoded = "0.7.1"
clickhouse = { version = "0.13.1", features = ["inserter"] }
serde_repr = "0.1.19"
once_cell = "1.20.2"
sonic-rs = "0.3.16"
futures = "0.3.31"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
